.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arinvdue__c.object
<CustomObject>
    <description>arinvdue__c</description>
    <fields>
        <fullName>rstkf__arinvdue_age__c</fullName>
        <description>Aging Date is the number of days since this Invoice Date.  Note that it is zero for &apos;paid&apos; transactions and also all credit memos/unapplied cash.</description>
        <formula>IF ( rstkf__arinvdue_maintvalue__c &gt; 0,  TODAY() - rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trandate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_arinvtxn__c</fullName>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment</relationshipLabel>
        <relationshipName>arinvdues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_dayslate__c</fullName>
        <formula>IF ( rstkf__arinvdue_duedate__c &lt; TODAY(), TODAY() - rstkf__arinvdue_duedate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_discntduedate__c</fullName>
        <inlineHelpText>The Due Date if any Discount Terms are to be taken advantage of</inlineHelpText>
        <label>Discount Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_discntpct__c</fullName>
        <label>Discount Percentage Allowed</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_disctknmaint__c</fullName>
        <label>Discount taken maint</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_amtmaint__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__arapplic__c.rstkf__arapplic_trantype__c</field>
            <operation>equals</operation>
            <value>Discount Taken</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arinvdue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_disptxnamt__c</fullName>
        <formula>IF( ISPICKVAL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trantype__c, &apos;Invoice&apos;) || ISPICKVAL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trantype__c, &apos;Debit Memo&apos;), rstkf__arinvdue_maintamt__c, rstkf__arinvdue_maintamt__c * -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Txn Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_duedate__c</fullName>
        <inlineHelpText>The Due Date for the &quot;net&quot; (non-discounted) amount, used when any Discount Terms are not taken</inlineHelpText>
        <label>Net Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_gaincracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Account for Gain</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment (Credit Account for Gain)</relationshipLabel>
        <relationshipName>arinvdues01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_gaincramt__c</fullName>
        <label>Credit Amount for Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_gaindracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Account for Gain</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment</relationshipLabel>
        <relationshipName>arinvdues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_gaindramt__c</fullName>
        <label>Debit Amount for Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_gainlosscrgltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment (Gain/Loss GL Credit)</relationshipLabel>
        <relationshipName>arinvdues01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_gainlossdrgltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment</relationshipLabel>
        <relationshipName>arinvdues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_homeamt__c</fullName>
        <inlineHelpText>The Document Amount (Transaction Amount) displayed in Home Currency.</inlineHelpText>
        <label>Document Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_homeamtnotax__c</fullName>
        <formula>IF(TEXT(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_arinvh__r.rstkf__arinvh_poststatus__c) == &apos;Posted&apos;,

(rstkf__arinvdue_homeamt__c + IF(ISNULL(rstkf__arinvdue_whtamthome__c),0, rstkf__arinvdue_whtamthome__c) -

IF(ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinv__c), IF(ISNULL(rstkf__arinvdue_taxamthome__c), 0, rstkf__arinvdue_taxamthome__c),
IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c * rstkf__arinvdue_txnpct__c))
)

),


IF( ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_sotax__c) ,
IF( ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_syvatclass__c),
rstkf__arinvdue_homeamt__c - IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c * rstkf__arinvdue_txnpct__c)), rstkf__arinvdue_homeamt__c -

IF(ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinv__c), IF(ISNULL(rstkf__arinvdue_taxamthome__c), 0, rstkf__arinvdue_taxamthome__c),
IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c * rstkf__arinvdue_txnpct__c))
)
)
,
rstkf__arinvdue_homeamt__c - IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c * rstkf__arinvdue_txnpct__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Amount Excluding Tax - Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_homecr__c</fullName>
        <label>Credits to Sched Pay - Home Curr</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_arcrhome__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arinvdue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_homedr__c</fullName>
        <label>Debits to Sched Pay- Home Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_ardrhome__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arinvdue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_homenetchange__c</fullName>
        <formula>rstkf__arinvdue_homedr__c - rstkf__arinvdue_homecr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net changes to Sched Pay- Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_homevalue__c</fullName>
        <formula>IF((ISPICKVAL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trantype__c, &apos;Debit Memo&apos;) || ISPICKVAL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trantype__c, &apos;Invoice&apos;)), rstkf__arinvdue_homeamt__c + rstkf__arinvdue_homenetchange__c, (rstkf__arinvdue_homeamt__c* -1)+ rstkf__arinvdue_homenetchange__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sched Pay Current Value- Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_isvariance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currency Variance Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_losscracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Account for Loss</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment (Credit Account for Loss)</relationshipLabel>
        <relationshipName>arinvdues03</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_losscramt__c</fullName>
        <label>Credit Amount for Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_lossdracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Account for Loss</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment (Debit Account for Loss)</relationshipLabel>
        <relationshipName>arinvdues02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_lossdramt__c</fullName>
        <label>Debit Amount for Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_maintamt__c</fullName>
        <inlineHelpText>The amount from the Document Number entered, displayed in Document Currency</inlineHelpText>
        <label>Document Amount - Document Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_maintamtnotax__c</fullName>
        <formula>IF(TEXT(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_arinvh__r.rstkf__arinvh_poststatus__c) == &apos;Posted&apos;,

(rstkf__arinvdue_maintamt__c + IF(ISNULL(rstkf__arinvdue_whtamt__c),0, rstkf__arinvdue_whtamt__c) -

IF(ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinv__c), IF(ISNULL(rstkf__arinvdue_taxamt__c), 0, rstkf__arinvdue_taxamt__c),
IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c * rstkf__arinvdue_txnpct__c))
)

),


IF( ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_sotax__c) ,
IF( ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_syvatclass__c),
rstkf__arinvdue_maintamt__c - IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c * rstkf__arinvdue_txnpct__c)) , rstkf__arinvdue_maintamt__c -

IF(ISBLANK(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinv__c), IF(ISNULL(rstkf__arinvdue_taxamt__c), 0, rstkf__arinvdue_taxamt__c),
IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c * rstkf__arinvdue_txnpct__c))
)
)
,
rstkf__arinvdue_maintamt__c - IF(ISNULL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c), 0, (rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c * rstkf__arinvdue_txnpct__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Amount Excluding Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_maintcr__c</fullName>
        <label>Credits to Sched Pay - Txn Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_arcrmaint__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arinvdue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_maintdr__c</fullName>
        <label>Debits to Sched Pay - Txn Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_ardrmaint__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arinvdue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_maintnetchange__c</fullName>
        <formula>rstkf__arinvdue_maintdr__c - rstkf__arinvdue_maintcr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Changes to Sched Pay- Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_maintvalue__c</fullName>
        <formula>IF((ISPICKVAL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trantype__c, &apos;Debit Memo&apos;) || ISPICKVAL(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trantype__c, &apos;Invoice&apos;)), rstkf__arinvdue_maintamt__c + rstkf__arinvdue_maintnetchange__c, (rstkf__arinvdue_maintamt__c* -1)+ rstkf__arinvdue_maintnetchange__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sched Paymt Current Value - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_schedseq__c</fullName>
        <label>Scheduled Payment Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arinvdue_socustcmpno__c</description>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Receivable Transaction Scheduled Payment</relationshipLabel>
        <relationshipName>arinvdues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_soinvtaxamt__c</fullName>
        <formula>rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field contains the amount of tax for this Scheduled Payment calculated on the Sales Invoice from which this AR Transaction originates</inlineHelpText>
        <label>Tax Amount from Sales Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_soinvtaxamthome__c</fullName>
        <formula>rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_soinvtaxamthome__c</formula>
        <inlineHelpText>This field contains the amount of tax for this Scheduled Payment calculated on the Sales Invoice from which this AR Transaction originates - in home currency</inlineHelpText>
        <label>Tax Amount from Sales Invoice – Home Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_taxamt__c</fullName>
        <description>arinvdue_taxamt__c</description>
        <inlineHelpText>The Tax Amount expressed in Transaction Currency</inlineHelpText>
        <label>TAX Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_taxamthome__c</fullName>
        <description>arinvdue_taxamthome__c</description>
        <inlineHelpText>The Tax Amount expressed in Home Currency</inlineHelpText>
        <label>TAX Amount – Home Currency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_txnpct__c</fullName>
        <formula>If(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_summaintamt__c = 0,1,rstkf__arinvdue_maintamt__c / rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_summaintamt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field carries the percentage of the Transaction Total that is on this Scheduled Payment</inlineHelpText>
        <label>Percentage of Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_variance__c</fullName>
        <label>Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_whtamt__c</fullName>
        <description>arinvdue_whtamt__c</description>
        <label>WHT Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdue_whtamthome__c</fullName>
        <description>arinvdue_whtamthome__c</description>
        <label>WHT Amount – Home Currency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <description>formula_extid__c</description>
        <formula>rstkf__arinvdue_arinvtxn__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstkf__arinvdue_schedseq__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT(rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_docno__c &amp; &apos;(&apos; &amp; TEXT(rstkf__arinvdue_schedseq__c) &amp; &apos;)&apos;, 80)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Receivable Transaction Scheduled Payment</label>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Receivable_Transaction_Scheduled_Payment</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arinvdue_arinvtxn__c</columns>
        <columns>rstkf__arinvdue_homeamt__c</columns>
        <columns>rstkf__arinvdue_maintamt__c</columns>
        <columns>rstkf__arinvdue_gainlossdrgltxn__c</columns>
        <columns>rstkf__arinvdue_gainlosscrgltxn__c</columns>
        <columns>rstkf__arinvdue_duedate__c</columns>
        <columns>rstkf__arinvdue_discntpct__c</columns>
        <columns>rstkf__arinvdue_discntduedate__c</columns>
        <columns>rstkf__arinvdue_gaindramt__c</columns>
        <columns>rstkf__arinvdue_lossdracct__c</columns>
        <columns>rstkf__arinvdue_gaincramt__c</columns>
        <columns>rstkf__arinvdue_losscramt__c</columns>
        <columns>rstkf__arinvdue_homevalue__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__arinvdue_maintamt__c</field>
            <operation>equals</operation>
            <value>2323</value>
        </filters>
        <label>Receivable Transaction Scheduled Payment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Receivable_Transaction_Scheduled_Payment_jsf</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__arinvdue_arinvtxn__c</columns>
        <columns>rstkf__arinvdue_homeamt__c</columns>
        <columns>rstkf__arinvdue_maintamt__c</columns>
        <columns>rstkf__arinvdue_gainlossdrgltxn__c</columns>
        <columns>rstkf__arinvdue_gainlosscrgltxn__c</columns>
        <columns>rstkf__arinvdue_duedate__c</columns>
        <columns>rstkf__arinvdue_discntduedate__c</columns>
        <columns>rstkf__arinvdue_gaindramt__c</columns>
        <columns>rstkf__arinvdue_lossdracct__c</columns>
        <columns>rstkf__arinvdue_gaincramt__c</columns>
        <columns>rstkf__arinvdue_losscramt__c</columns>
        <columns>rstkf__arinvdue_homevalue__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__arinvdue_arinvtxn__c</field>
            <operation>equals</operation>
            <value>DN 578(SB CUST)</value>
        </filters>
        <label>Receivable Transaction Scheduled Pmt jsf</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receivable Transaction Scheduled Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__Amount_Applied_Exceed_Document_Amount</fullName>
        <active>true</active>
        <description>Amount Applied should not exceed the Document Amount</description>
        <errorConditionFormula>ROUND(rstkf__arinvdue_maintnetchange__c * -1, 2) &gt; ROUND(rstkf__arinvdue_maintamt__c, 2)</errorConditionFormula>
        <errorMessage>Amount Applied should not exceed the Document Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__DIscount_Taken_Exceed_Available_Discount</fullName>
        <active>false</active>
        <description>Discount Taken should not exceed the Discount Available</description>
        <errorConditionFormula>ROUND(rstkf__arinvdue_disctknmaint__c, 2) &gt; ROUND((rstkf__arinvdue_discntpct__c * rstkf__arinvdue_maintamt__c / 100), 2)</errorConditionFormula>
        <errorMessage>Discount Taken should not exceed the Discount Available</errorMessage>
    </validationRules>
</CustomObject>